[package]
name = "rustc-dep-option-generator"
version = "0.1.0"
authors = ["rust-lang-ja Developers"]
edition = "2018"
description = "A program to generate Rust compiler options to locate prebuilt crates."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo = "0.38.0"
failure = "0.1.6"
shell-escape = "0.1.4"
structopt = "0.3.5"
to_absolute = "0.1.0"
itertools = "0.8.2"
